fix layout issue in main nav

--- a/app/assets/stylesheets/extern/base/_navigation.css.scss
+++ b/app/assets/stylesheets/extern/base/_navigation.css.scss
@@ -32,6 +32,7 @@ nav {
   a:link, a:visited {
     display: block;
     color: white;
+    font-size: 14px;
   }
 
   a.active {
