--- a/app/assets/stylesheets/extern/responsive/desktop_big/_layout.css.scss
+++ b/app/assets/stylesheets/extern/responsive/desktop_big/_layout.css.scss
@@ -10,4 +10,8 @@
     }
   }
   
+  nav a:link {
+    font-size: 15px;
+  }
+  
 }
